# bug-report-normalizer

./: .gitignore  README.md  pyproject.toml
docs/: decisions.md
src/bug_report_normalizer/: __main__.py  cli.py  exceptions.py  llm_client.py  models.py  prompts.py  renderer.py  service.py
tests/: fakes.py
tests/contract/: test_bug_report_contract.py  test_regression_dataset.py
tests/fixtures/: regression_cases.json
tests/integration/: test_ollama_smoke.py
tests/unit/: test_cli.py  test_llm_client.py  test_models.py  test_package.py  test_prompts.py  test_renderer.py  test_service.py
