[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bug-report-normalizer"
version = "0.1.0"
description = "CLI tool that turns messy bug notes into structured draft bug reports."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Jan Mrowiec" }
]
dependencies = [
  "pydantic>=2.7.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.4.0,<1.0.0",
]

[project.scripts]
bug-report-normalizer = "bug_report_normalizer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
